# accessify-rs

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build-matrix.yml  build.yml  docker.yml
src/: main.rs
src/handler/: mod.rs  spotify.rs  token.rs
src/types/: spotify.rs
src/utils/: logger.rs
