[package]
name = "accessify"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
base64 = "0.22.1"
chromiumoxide = "0.7.0"
chrono = "0.4.41"
dotenv = "0.15"
futures = "0.3.31"
headers = "0.4.1"
once_cell = "1.18"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tower-http = { version = "0.6.6", features = ["trace"] }
hyper = "1.6.0"
